# apt-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: main.py
src/api/: dependencies.py  main.py
src/api/routers/: accounts.py  auth.py  users.py
src/api/schemas/: accounts.py  companies.py  users.py
src/auth/: db.py  main.py  models.py  repository.py  utils.py
src/bot/: mail_sender.py  main.py
src/config/: settings.py
src/core/: config.py
src/core/settings/: app.py  base.py  google.py  postgres.py
src/core/settings/envs/: development.py  test.py
src/db/: manager.py
src/db/models/: __init__.py  accounts.py  auth_tokens.py  base.py  readings.py  refresh_tokens.py  users.py  utility_companies.py  utility_providers.py
src/migrations/: env.py
src/migrations/versions/: 3da74c02733e_rename_utility_companies_to_utility_.py  42ba27f755d6_init.py  6189ea912de5_init.py  9db5a22952a6_add_account_model.py  f181b96de754_change_datetimemixin.py  ffbc83e40b79_change_tg_id_column_type.py
src/repositories/: accounts.py  auth_token.py  base.py  refresh_token.py  user.py
src/scheduler/: schedule.py
src/services/: oauth_service.py
src/tests/bot/: main_test.py
src/utils/: jwt_utils.py
tests/bot_tests/: mail_sender_test.py
